# smelt-ai

./: .gitignore  README.md  README_PYPI.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: changelog.md  index.md  spec.md
docs/api/: errors.md  job.md  model.md  results.md
docs/cookbook/: advanced.md  classification.md  enrichment.md  extraction.md  sentiment.md  vision.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: architecture.md  batching.md  errors.md  prompts.md  providers.md
examples/: aggregate_sequential.py  aggregate_tree.py  classification.py  error_handling.py  free_text.py  pandas_integration.py  vision_ecg.py
notebooks/: demo.ipynb
src/smelt/: __init__.py  aggregate.py  aggregate_job.py  batch.py  errors.py  image.py  job.py  model.py  prompt.py  types.py  validation.py
tests/: conftest.py  test_aggregate.py  test_aggregate_job.py  test_batch.py  test_image.py  test_integration.py  test_job.py  test_live.py  test_live_aggregate.py  test_live_vision.py  test_prompt.py  test_validation.py
tests/data/: companies.csv  employee_survey.csv  portfolio_companies.csv  products.csv  support_tickets.csv
