[project]
name = "smelt-ai"
version = "0.1.0"
description = "LLM-powered structured data transformation"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "langchain-core>=0.3",
    "langchain>=0.3",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["langchain-openai"]
anthropic = ["langchain-anthropic"]
google = ["langchain-google-genai"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smelt"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "python-dotenv>=1.0",
    "ipykernel>=7.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
